--- a/package.json
+++ b/package.json
@@ -4,15 +4,19 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "build":"npx grunt build"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.8.3",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20",
+    "path": "^0.12.7",
     "zod": "^3.20.2"
   }
 }
